# PP2_3D_Reconstruction

Matlab/: Cam2Global.m  DeleteNoise.m  Denoise.m  Denoise_single_file.m  InRange.m  JointPC.m  ParamGetter.m  PassThroughFilter.asv  PassThroughFilter.m  PlotKS.m  PlotSegments.m  PlotTrajectory.m  PointInBox.m  SpaceCutter.m  Trajectory_for_images.mat  Trajectory_sections.mat  TrasCam2Global.m  Untitled.m  Untitled2.asv  Untitled2.m  Untitled4.m  XYZRange.txt  getR_rpy.m  getSegments.m  getVerticalLine.m  getXYZRange.m  histogram.m  matlab.mat  savePointCloud.m  test.m  timestamps_camera.csv  timestamps_camera.mat
Matlab/ransac/: ._LoadPly.m  ._main_RANSAC.m  LoadPly.m  PCA.m  countConsensus.m  getAngleDegree.m  getNoise.m  getPlaneParameters.m  getPlaneParametersFrom3Points.m  getReducedCoordinates.m  main_RANSAC.m  main_RANSAC_modified.m  ransac.m  ransacOpt.m  task2.m
PP2Project/: CMakeLists.txt
PP2Project/Include/: DenseMatcher.h  PtGenerator.h  StereoRectifier.h  stdafx.h
PP2Project/Source/: DenseMatcher.cpp  PtGenerator.cpp  StereoRectifier.cpp  main.cpp
VoxelGridFiltering/: CMakeLists.txt
VoxelGridFiltering/Include/: VoxelGridFilter.h
VoxelGridFiltering/Source/: VoxelGridFilter.cpp  filtering.cpp
lib_elasstereo/: CMakeLists.txt
lib_elasstereo/Include/: ElasMatcher.h  descriptor.h  elas.h  filter.h  matrix.h
lib_elasstereo/Source/: ElasMatcher.cpp  filter.cpp  main.cpp
lib_spsstereo/: CMakeLists.txt
lib_spsstereo/Include/: defParameter.h
lib_spsstereo/Source/: spsstereo_main.cpp
plane_estimation/: CMakeLists.txt
plane_estimation/Include/: Ransac.h
plane_estimation/Source/: Ransac.cpp  main.cpp
txt2pcd/: CMakeLists.txt  txt2pcd.cpp
